feat(AddServiceConfigRequest): added hierarchy of data objects for the request